updates to css and coding bootcamp section

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .nav-wrapper{
-	background-color: purple;
+	background-color: teal;
 }
 #row1{
 	margin-top: 40px;
@@ -11,17 +11,25 @@
 #codeImage{
 	opacity: 0.6
 }
-
+h2{
+	text-align: center;
+}
 #map {
     height: 500px;
     width: 600px;
     float: left;
     display: inline;
+    margin-left: 30px;
+    border: black solid 2px;
 }
 #bootcampList{
 	float: left;
 	display: inline;
-	margin-left: 20px
+	margin-left: 20px;
+	
+}
+#bootcamps{
+	margin-bottom: 50px;
 }
 #address{
 	margin-left: 20px;
