--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 .nav-wrapper{
 	background-color: teal;
 }
-
+img{
+	margin-top: 30px;
+	text-align: center;
+}
 #row1{
 	margin-top: 40px;
 }
@@ -12,10 +15,19 @@
 #codeImage{
 	opacity: 0.6
 }
-
-#podcastDiv{
-	margin-left: 20px;
-	float: left;
+#Podsection{
+	text-align: center;
+	padding: left: 20px;
+}
+#YTsection{
+	text-align: center;
+	padding: left: 20px;
+}
+.podcastImage{
+	margin-left: 10px;
+}
+p{
+	text-align: center;
 }
 h1{
 	text-align: center;
@@ -23,16 +35,20 @@ h1{
 h2{
 	text-align: center;
 }
-
+#logo{
+	text-align: center;
+}
 #map {
     height: 500px;
     width: 600px;
     float: left;
     display: inline;
-
-    margin-left: 30px;
+    margin-bottom: 30px;
+    margin-left: 70px;
     border: black solid 2px;
-
+}
+.searchButton{
+	text-align: center;
 }
 #bootcampList{
 	float: left;
@@ -47,4 +63,16 @@ h2{
 }
 #address{
 	margin-left: 20px;
+}
+
+footer {
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	height: 50px;
+	background-color: teal;
+	padding-top: 20px;
+	text-align: center;
+	color: #dddddd;
 }
