--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,11 @@ footer {
 	text-align: center;
 	color: #dddddd;
 }
+
+@media only scrren and (max-width: 960) {
+
+	iframe {
+		width:50px;
+		height: 50px;
+	}
+}
